// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a simple query works 1`] = `null`;

exports[`a simple query works 2`] = `
<div>
  <div>
    max
    : 
    14
  </div>
  <div>
    doge
    : 
    5
  </div>
</div>
`;

exports[`query with props works 1`] = `null`;

exports[`query with props works 2`] = `
<div>
  max
  : 
  14
</div>
`;

exports[`query with props works 3`] = `
<div>
  doge
  : 
  5
</div>
`;

exports[`the mock-1 and utility functions works 1`] = `<div />`;
